--- a/roles/sap_hana_backint/tasks/setup/setup_backint_ibm_cos_s3.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_ibm_cos_s3.yml
@@ -104,13 +104,13 @@
     mode: "0755"
 
 # Softlink hdbbackint
-#- name: SAP HANA Backint - Setup - IBM COS - {{ sap_hana_backint_setup_backint_file }} {{ sap_hana_backint_setup_backint_directory }}/hdbbackint
-#  ansible.builtin.file:
-#    src: "{{ sap_hana_backint_setup_backint_file }}"
-#    dest: "{{ sap_hana_backint_setup_backint_directory }}/hdbbackint"
-#    owner: "{{ passed_sap_hana_sid | lower }}adm"
-#    group: sapsys
-#    state: link
+# - name: SAP HANA Backint - Setup - IBM COS - {{ sap_hana_backint_setup_backint_file }} {{ sap_hana_backint_setup_backint_directory }}/hdbbackint
+#   ansible.builtin.file:
+#     src: "{{ sap_hana_backint_setup_backint_file }}"
+#     dest: "{{ sap_hana_backint_setup_backint_directory }}/hdbbackint"
+#     owner: "{{ passed_sap_hana_sid | lower }}adm"
+#     group: sapsys
+#     state: link
 
 # Process hdbbackint.cfg
 - name: SAP HANA Backint - Setup - IBM COS - Process hdbbackint.cfg
@@ -125,7 +125,7 @@
   ansible.builtin.file:
     path: "{{ sap_hana_backint_setup_backint_directory }}"
     state: directory
-    recurse: yes
+    recurse: true
     mode: "0755"
     owner: "{{ passed_sap_hana_sid | lower }}adm"
     group: sapsys
