feat: change role name and structure

--- a/roles/sap_rfc/tasks/main.yml
+++ b/roles/sap_rfc/tasks/main.yml
@@ -7,9 +7,10 @@
   ansible.builtin.include_tasks: python_pyrfc_discover.yml
   when: not pyrfc_first_run | bool
 
+# Use Ansible Task block to call sap_pyrfc Ansible Module in the Ansible Collection for sap_libs
 # RFC call using variables set by the Ansible Playbook when calling this Ansible Role
 - name: Execute Ansible Module to call PyRFC using the virtualenv Python3
-  community.sap_operations.sap_pyrfc:
+  community.sap_libs.sap_pyrfc:
     function: "{{ target_function }}"
     parameters: "{{ target_parameters }}"
     connection: "{{ target_connection }}"
