--- a/playbooks/sample-sap-rfc.yml
+++ b/playbooks/sample-sap-rfc.yml
@@ -5,7 +5,7 @@
   vars:
     suser_id: 'S00000000'
     suser_password: 'password'
-    sap_nwrfc_sdk: nwrfc750P_8-70002752.zip
+    sap_nwrfc_sdk: nwrfc750P_10-70002752.zip
     reuse_connection:
       ashost: s4hana.poc.cloud
       sysid: TDT
@@ -29,7 +29,7 @@
         REQUTEXT: 'Hello SAP!'
       target_connection: "{{ reuse_connection }}"
     include_role:
-      name: community.sap_operations.sap_pyrfc
+      name: community.sap_operations.sap_rfc
     register: sap_rfc_output1
 
   - name: DEBUG - Output of STFC_CONNECTION
@@ -47,7 +47,7 @@
           - COLUMN0: test
       target_connection: "{{ reuse_connection }}"
     include_role:
-      name: community.sap_operations.sap_pyrfc
+      name: community.sap_operations.sap_rfc
     register: sap_rfc_output2
 
   - name: DEBUG - Output of STFC_STRUCTURE
