--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,3 +1,5 @@
+---
+
 ### REQUIRED
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
@@ -40,19 +42,20 @@ tags: []
 # collection label 'namespace.name'. The value is a version range
 # L(specifiers,https://python-semanticversion.readthedocs.io/en/latest/#requirement-specification). Multiple version
 # range specifiers can be set and are separated by ','
-dependencies: {}
+dependencies:
+  community.sap_libs: '*'
 
 # The URL of the originating SCM repository
-repository: http://example.com/repository
+repository: https://github.com/sap-linuxlab/community.sap_operations
 
 # The URL to any online docs
-documentation: http://docs.example.com
+documentation: https://github.com/sap-linuxlab/sap-linuxlab.github.io/blob/master/README.md
 
 # The URL to the homepage of the collection/project
-homepage: http://example.com
+homepage: https://sap-linuxlab.github.io
 
 # The URL to the collection issue tracker
-issues: http://example.com/issue/tracker
+issues: https://github.com/sap-linuxlab/community.sap_operations/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
