--- a/roles/sap_rfc/meta/main.yml
+++ b/roles/sap_rfc/meta/main.yml
@@ -10,7 +10,7 @@ galaxy_info:
       versions: [ 7, 8, 9 ]
     - name: SLES
       versions: [ 15SP3 ]
-  galaxy_tags: [ 'sap', 'swpm', 'sapinst', 'rhel', 'redhat', 'sles', 'suse' ]
+  galaxy_tags: [ 'sap', 'rfc', 'pyrfc', 'rhel', 'redhat', 'sles', 'suse' ]
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
 collections:
