Performed some lint cleaning and added the corresponding cleaning file I also installed the pre-commit config to avoid pushes, that are not lint-clean

--- a/roles/sap_profile_update/tasks/main.yml
+++ b/roles/sap_profile_update/tasks/main.yml
@@ -2,6 +2,7 @@
 # Get instance profile path using sapcontrol
 - name: SAP Profile Update - Get Instance Profile
   ansible.builtin.shell: |
+    set -o pipefail
     source ~/.profile && cdexe; sapcontrol -nr {{ sap_update_profile_instance_nr }} -function ParameterValue SAPPROFILE | grep profile
   args:
     executable: /bin/bash
