collection: resolve pr comments

--- a/playbooks/sample-sap-fapolicy-all-update.yml
+++ b/playbooks/sample-sap-fapolicy-all-update.yml
@@ -14,7 +14,7 @@
   - name: Fapolicy Update - generic
     vars:
       sap_fapolicy_type: "generic"
-    include_role:
+    ansible.builtin.include_role:
       name: community.sap_operations.sap_fapolicy
     loop: "{{ sap_fapolicy_user_generic_list }}"
     loop_control:
@@ -30,6 +30,6 @@
     vars:
       sap_fapolicy_sid: "{{ item.Type }}"
       sap_fapolicy_type: "{{ item.Type }}"
-    include_role:
+    ansible.builtin.include_role:
       name: community.sap_operations.sap_fapolicy
     loop: "{{ sap_facts_register.sap_facts }}"
