--- a/playbooks/sample-sap-profile-update.yml
+++ b/playbooks/sample-sap-profile-update.yml
@@ -32,6 +32,6 @@
     vars:
       sap_update_profile_sid: "{{ item.SID }}"
       sap_update_profile_instance_nr: "{{ item.InstanceNumber }}"
-    include_role:
+    ansible.builtin.include_role:
       name: community.sap_operations.sap_profile_update
     loop: "{{ sap_facts_register.sap_facts }}"
