--- a/playbooks/sample-sap-firewall-all-update.yml
+++ b/playbooks/sample-sap-firewall-all-update.yml
@@ -13,6 +13,6 @@
     vars:
       sap_firewall_type: "{{ item.Type }}"
       sap_firewall_instance_nr: "{{ item.InstanceNumber }}"
-    include_role:
+    ansible.builtin.include_role:
       name: community.sap_operations.sap_firewall
     loop: "{{ sap_facts_register.sap_facts }}"
