--- a/playbooks/sample-sap-rfc.yml
+++ b/playbooks/sample-sap-rfc.yml
@@ -28,7 +28,7 @@
       target_parameters:
         REQUTEXT: 'Hello SAP!'
       target_connection: "{{ reuse_connection }}"
-    include_role:
+    ansible.builtin.include_role:
       name: community.sap_operations.sap_rfc
     register: sap_rfc_output1
 
@@ -46,7 +46,7 @@
         RFCTABLE:
           - COLUMN0: test
       target_connection: "{{ reuse_connection }}"
-    include_role:
+    ansible.builtin.include_role:
       name: community.sap_operations.sap_rfc
     register: sap_rfc_output2
 
