--- a/roles/sap_hana_sr_takeover/tasks/main.yml
+++ b/roles/sap_hana_sr_takeover/tasks/main.yml
@@ -2,8 +2,8 @@
 # tasks file for sap_hana_sr_takeover
 #
 
-- name: get hdb online state
-  shell: |
+- name: Get hdb online state
+  ansible.builtin.shell: |
     set -o pipefail
     source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
     /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/exe/hdbnsutil \
@@ -17,7 +17,7 @@
 
 # returns: none, primary or replication method (on secondary)
 - name: get mode of system
-  shell: |
+  ansible.builtin.shell: |
     set -o pipefail
     source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
     /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/exe/hdbnsutil \
@@ -33,14 +33,14 @@
 # enable the right primary
 #
 - name: Fail, when planned primary cannot take over (no hsr configured)
-  fail:
+  ansible.builtin.fail:
     msg: "This system is not part of HANA SR."
   when:
     - ansible_hostname == sap_hana_sr_takeover_primary
     - register_sap_hana_sr_takeover_mode.stdout == "none"
 
 - name: make 'sap_hana_sr_takeover_primary' the new primary
-  shell: |
+  ansible.builtin.shell: |
     source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
     /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/exe/hdbnsutil \
     -sr_takeover
@@ -57,9 +57,14 @@
 # register the secondary
 #
 - name: register 'sap_hana_sr_takeover_secondary' to the new primary
+  become: true
+  become_user: "{{ sap_hana_sid | lower }}adm"
+  when:
+    - ansible_hostname == sap_hana_sr_takeover_secondary
+    - register_sap_hana_sr_takeover_mode.stdout != sap_hana_sr_takeover_rep_mode
   block:
     - name: Ensure HDB on 'sap_hana_sr_takeover_secondary' is stopped
-      shell: |
+      ansible.builtin.shell: |
         source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
         /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/HDB stop
       args:
@@ -68,7 +73,7 @@
         - register_sap_hana_sr_takeover_online.stdout == 'true'
 
     - name: Register 'sap_hana_sr_takeover_secondary' to the primary
-      shell: |
+      ansible.builtin.shell: |
         source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
         /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/exe/hdbnsutil \
         -sr_register \
@@ -80,15 +85,9 @@
       args:
         executable: /bin/bash
 
-  become: true
-  become_user: "{{ sap_hana_sid | lower }}adm"
-  when:
-    - ansible_hostname == sap_hana_sr_takeover_secondary
-    - register_sap_hana_sr_takeover_mode.stdout != sap_hana_sr_takeover_rep_mode
-
 ## Check Online state and start HDB
-- name: get hdb online state
-  shell: |
+- name: Get hdb online state
+  ansible.builtin.shell: |
     set -o pipefail
     source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
     /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/exe/hdbnsutil \
@@ -101,7 +100,7 @@
   register: register_sap_hana_sr_takeover_online
 
 - name: Ensure HDB is running
-  shell: |
+  ansible.builtin.shell: |
     source /usr/sap/{{ sap_hana_sid | upper }}/home/.sapenv.sh && \
     /usr/sap/{{ sap_hana_sid | upper }}/HDB{{ sap_hana_instance_number }}/HDB start
   args:
