--- a/roles/sap_control/tasks/main.yml
+++ b/roles/sap_control/tasks/main.yml
@@ -85,10 +85,10 @@
 #     name: roles/sap_info
 
 # Get SAP Facts
-#- name: Run sap_facts module to gather SAP facts
-#  sap_facts:
-#    param: "{{ sap_facts_param }}"
-#  register: sap_facts_register
+- name: Run sap_facts module to gather SAP facts
+  sap_facts:
+    param: "{{ sap_facts_param }}"
+  register: sap_facts_register
 
 - name: Debug facts
   ansible.builtin.debug:
