--- a/roles/sap_hana_backint/tasks/setup/setup_backint_gcs.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_gcs.yml
@@ -12,17 +12,22 @@
     sap_hana_backint_setup_backint_directory: "/usr/sap/{{ passed_sap_hana_sid }}/SYS/global/hdb/opt"
     passed_sap_hana_instance_nr: "{{ sap_hana_instance_nr_one[0] }}"
 
-- name: SAP HANA Backint - Setup - GCS - Clone hanacleaner.py
-  ansible.builtin.git:
-    repo: https://github.com/chriselswede/hanacleaner.git
-    dest: "$HOME/.ansible/tmp/git_hanacleaner"
-#    single_branch: true # Not compatible with Ansible 2.9
-    version: master
+- name: SAP HANA Backint - Setup - GCS - Download hanacleaner.py
+  ansible.builtin.get_url:
+    url: https://github.com/chriselswede/hanacleaner/archive/refs/heads/master.zip
+    dest: "/tmp/hanacleaner-master.zip"
+    mode: '0440'
+
+- name: SAP HANA Backint - Setup - GCS - Unpack hanacleaner.py
+  ansible.builtin.unarchive:
+    remote_src: true
+    src: "/tmp/hanacleaner-master.zip"
+    dest: "/tmp"
 
 # Copy hanacleaner.py
 - name: SAP HANA Backint - Setup - GCS - Copy hanacleaner.py to SAP HANA backint directory
   ansible.builtin.copy:
-    src: "$HOME/.ansible/tmp/git_hanacleaner/hanacleaner.py"
+    src: "/tmp/hanacleaner-master/hanacleaner.py"
     dest: "{{ sap_hana_backint_setup_backint_directory }}/hanacleaner.py"
     mode: "0755"
     remote_src: true
