--- a/roles/sap_rfc/defaults/main.yml
+++ b/roles/sap_rfc/defaults/main.yml
@@ -1,8 +1,10 @@
-#pyrfc_first_run: true
+---
 
-#sap_nwrfc_sdk: nwrfc750P_10-70002752.zip
+# sap_rfc_first_run_download_sap_user_id: ""
+# sap_rfc_first_run_download_sap_user_password: ""
+sap_rfc_first_run_download_path: /software
 
-#target_connection:
+#sap_rfc_target_connection:
 #  ashost: s4hana.poc.cloud
 #  sysid: TDT
 #  sysnr: "01"
@@ -15,7 +17,22 @@
 #  gwhost: gateway.poc.cloud
 #  ghserv: gateway.poc.cloud
 
-target_function: STFC_CONNECTION
+sap_rfc_target_function: STFC_CONNECTION
 
-target_parameters:
+sap_rfc_target_parameters:
   REQUTEXT: "Hello SAP!"
+
+
+# Override default for detected CPU Architecture (x86_64, ppc64le)
+# Contains /usr/local/sap/nwrfcsdk/lib with libsapnwrfc.so , libicuuc.so.50 , libicudata.so.50 , libicui18n.so.50 , libsapucum.so
+# Contains /usr/local/sap/nwrfcsdk/include with sapdecf.h , sapnwrfc.h , sapucrfc.h
+# sap_rfc_first_run_download_nwrfc_sdk: "" # 7.50 x86_64 = nwrfc750P_12-70002752.zip , ppc64le = nwrfc750P_12-70002761.zip
+
+
+# NOT USED:
+# May cause errors with additional dependency libs not available in the LD_LIBRARY_PATH '/usr/local/sap/nwrfcsdk/lib'
+# (e.g. libicuuc65.so, libicudata65.so, libicui18n65.so)
+# Not recommended as per SAP Note 3384574 - SAP NW RFC SDK 7.50 hotfix installation
+# Therefore Ansible Tasks code exists, but commented-out
+# sap_rfc_first_run_download_sapcar: "" # x86_64 = SAPCAR_1115-70006178.EXE , ppc64le = SAPCAR_1115-70006238.EXE
+# sap_rfc_first_run_download_nwrfc_sdk_patch: "" # 7.93 Backwards Compatible x86_64  = sapnwrfc_69-70007807.sar , ppc64le = sapnwrfc_69-70007832.sar
