--- a/roles/sap_control/tasks/prepare.yml
+++ b/roles/sap_control/tasks/prepare.yml
@@ -13,9 +13,9 @@
   vars:
     sap_control_execute_sid: "{{ item.SID }}"
     sap_control_execute_type: "{{ item.Type }}"
-    sap_control_execute_instance_nr: "{{ item.InstanceNumber }}"
+    sap_control_execute_instance_nr: "{{ item.NR }}"
     sap_control_execute_instance_type: "{{ item.InstanceType }}"
   ansible.builtin.include_tasks: "sapcontrol.yml"
-  loop: "{{ sap_facts_register.sap_facts }}"
+  loop: "{{ sap_facts_register.ansible_facts.sap }}"
   when:
-    - "item.Type == sap_type"
+    - "item.InstanceType | lower == sap_type | lower"
