Adding *system_sap_nw functions to act only on selected SID
Signed-off-by: Nicolas Bettembourg <nbettembourg@oxya.com>

--- a/roles/sap_control/defaults/main.yml
+++ b/roles/sap_control/defaults/main.yml
@@ -61,6 +61,10 @@ sap_control_functions_list:
   - updatesystem_all_nw
   - startsystem_all_nw
   - stopsystem_all_nw
+  - restartsystem_sap_nw
+  - updatesystem_sap_nw
+  - startsystem_sap_nw
+  - stopsystem_sap_nw
   - restart_all_sap
   - stop_all_sap
   - start_all_sap
