Fix restart issue by initializing variable sorted_sap_facts when prepare.yml is called.

--- a/roles/sap_control/tasks/prepare.yml
+++ b/roles/sap_control/tasks/prepare.yml
@@ -4,6 +4,7 @@
   ansible.builtin.set_fact:
     sap_type: "{{ function_list.sap_control_function_current.split('_')[0] | lower }}"
     funct_type: "{{ function_list.sap_control_function_current.split('_')[1] | lower }}"
+    sorted_sap_facts: []
 
 - name: Prepare - Set header
   ansible.builtin.set_fact:
