--- a/roles/sap_fapolicy/tasks/enable_fapolicy.yml
+++ b/roles/sap_fapolicy/tasks/enable_fapolicy.yml
@@ -1,5 +1,6 @@
+# SPDX-License-Identifier: Apache-2.0
 ---
-- name: SAP Faplocy - Service fapolicy state - start & enable
+- name: Enable - Start and enable fapolicyd service
   ansible.builtin.systemd:
     state: started
     name: fapolicyd
