--- a/roles/sap_control/tasks/sapcontrol_async.yml
+++ b/roles/sap_control/tasks/sapcontrol_async.yml
@@ -1,4 +1,30 @@
 ---
+- name: Wait for status to change if using restart or update
+  when: funct_type is match('restart|update')
+  block:
+    - name: SAP {{ sap_control_name_header }} - Getting current system state
+      ansible.builtin.shell: |
+        source ~/.profile && sapcontrol -nr {{ passed_sap_nr }} -function {{ async_function_dict.test_function }}
+      args:
+        executable: /bin/bash
+      become: true
+      become_user: "{{ passed_sap_sid | lower }}adm"
+      register: initial_test_function_result
+
+    - name: SAP {{ sap_control_name_header }} - Waiting for state to change before polling
+      ansible.builtin.shell: |
+        source ~/.profile && sapcontrol -nr {{ passed_sap_nr }} -function {{ async_function_dict.test_function }}
+      args:
+        executable: /bin/bash
+      become: true
+      become_user: "{{ passed_sap_sid | lower }}adm"
+      register: wait_for_change_result
+      retries: "{{ async_function_dict.retries | default(0) | int }}"
+      delay: "{{ async_function_dict.delay | default(0) | int }}"
+      until: >
+        (wait_for_change_result.stdout | regex_findall('GREEN|YELLOW|GRAY|RED', multiline=True)  | sort | join(','))
+        != (initial_test_function_result.stdout | regex_findall('GREEN|YELLOW|GRAY|RED', multiline=True)  | sort | join(','))
+
 - name: Pause for 20 Seconds to ensure the async function is started
   ansible.builtin.wait_for:
     timeout: 20
@@ -15,9 +41,11 @@
   delay: "{{ async_function_dict.delay | default(0) | int }}"
   until: >
     (async_function_dict.until_false is not defined
-    or async_function_dict.until_false is defined and not test_function_result.stdout | regex_search(async_function_dict.until_false, multiline=True)) and
+    or async_function_dict.until_false is defined
+    and test_function_result.stdout | regex_search(async_function_dict.until_false, multiline=True) is none) and
     (async_function_dict.until_true is not defined or
-    async_function_dict.until_true is defined and test_function_result.stdout | regex_search(async_function_dict.until_true, multiline=True))
+    async_function_dict.until_true is defined
+    and test_function_result.stdout | regex_search(async_function_dict.until_true, multiline=True) is not none)
 
 - name: Debug stdout
   ansible.builtin.debug:
